2018-11-29  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht): Added \Configure{AddJs} and
	\Configure{AddCss} for external script and style sheet inclusion.
	* tex4ht-html4.tex (html4.4ht): Added support for web fonts.
	* tex4ht-html4.tex (html4.4ht): Made the GhostScript configuration for
	actuall gs executable selection for the PDF to png conversion.

2018-11-24  Karl Berry  <karl@freefriends.org>

	* tex4ht-4ht.tex (amsmath.4ht): <TeX4ht copywrite>.

2018-11-24  Michal Hoftich  <michal.h21@gmail.com>

	*  tex4ht-4ht.tex (amsmath.4ht): fixed redefinition of
	\xrightarrow and \xleftarrow.
	https://tex.stackexchange.com/q/461445/2891

2018-11-17  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (magyar.4ht): fixed support for \aref and \Aref
	commands.

2018-11-15  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (magyar.4ht): added support for \az command in Magyar
	Babel.

2018-11-09  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-4hf.tex
	(tex4ht.dir/texmf/tex4ht/ht-fonts/mozilla/charset/unicode.4hf):
	removed many unnecessary mappings from Unicode math to ASCII.

2018-11-08  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (czech.4ht): use \quotedblbase instead of
	custom code for opening quote.

2018-11-06  Karl Berry  <karl@freefriends.org>

	* tex4ht-4ht.tex (plain.4ht, fontmath.4ht): "copywrite"
	to include timestamps.

2018-11-06  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (plain.4ht, fontmath.4ht): added definition of \ldots 

2018-11-05  Karl Berry  <karl@freefriends.org>

	* tex4ht-4ht.tex (lettrine.4ht): copyright 2018.

2018-11-05  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (lettrine.4ht): use the same keyval namespace as
	lettrine.sty.
	https://github.com/michal-h21/tex4ebook/issues/48

2018-10-26  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-ooffice.tex (ooffice.4ht): added support for TocLink option.

2018-10-25  Michal Hoftich  <michal.h21@gmail.com>
