@@ -1,0 +1,151 @@
+% compile times: latex tex4ht-mathjax
+%
+% Copyright (C) 2018 TeX Users Group
+% Released under LPPL 1.3c+.
+% See tex4ht-cpright.tex for license text.
+%
+
+\ifx \HTML\UnDef
+   \def\HTML{mathjax-latex-4ht} 
+   \def\CONFIG{\jobname}
+   \def\MAKETITLE{\author{Michal Hoftich}}
+   \def\next{\input mktex4ht.4ht  \endinput}
+   \expandafter\next
+\fi
+
+\input{common-code}
+\input{common}
+\input{tex4ht-cpright}
+
+\<mathjax-latex-4ht\><<<
+% mathjax-latex-4ht.sty (|version), generated from |jobname.tex
+% Copyright (C) 2018 TeX Users Group
+|<TeX4ht copywrite|>
+|<required packages|>
+|<defined commands|>
+|<configurations|>
+\endinput
+>>>
+
+\<required packages\><<<
+\RequirePackage{etoolbox,expl3,environ}
+>>>
+
+The \verb|\alteqtoks| command saves the used command in HTML. It uses regular expressions
+to fix spacing issues introduced by use of the \verb|\detokenize| command.
+
+It works only with LaTeX.
+
+\<defined commands\><<<
+\ExplSyntaxOn
+\cs_new_protected:Npn \alteqtoks #1
+{
+  \tl_set:Nx \l_tmpa_tl {\detokenize{#1}}
+  % delete spaces before left brackets
+  \regex_replace_all:nnN { \x{20} \x{7B} } { \x{7B} } \l_tmpa_tl
+  % replace < > and & with xml entities
+  \regex_replace_all:nnN { \x{26} } { &amp; } \l_tmpa_tl
+  \regex_replace_all:nnN { \x{3C} } { &lt; } \l_tmpa_tl 
+  \regex_replace_all:nnN { \x{3E} } { &gt; } \l_tmpa_tl
+  \tl_set:Nx \l_tmpb_tl{ \l_tmpa_tl }
+  \HCode{\l_tmpb_tl}
+}
+\ExplSyntaxOff
+
+>>>
+
+The following commands are used for patching of the standard math commands and
+environments. They will then keep the LaTeX code unchanged.
+
+\<defined commands\><<<
+\long\def\AltlMath#1\){\expandafter\alteqtoks{\(#1\)}\)}
+\long\def\AltlDisplay#1\]{\alteqtoks{\[#1\]}\]}
+\long\def\AltMathOne#1${\alteqtoks{\(#1\)}$}
+
+\newcommand\VerbMathToks[2]{%
+  \alteqtoks{\begin{#2}
+    #1
+  \end{#2}}%
+}
+\newcommand\VerbMath[1]{%
+\ifcsdef{#1}{%
+  \RenewEnviron{#1}{%
+  \NoFonts\expandafter\VerbMathToks\expandafter{\BODY}{#1}\EndNoFonts%
+  }
+}{}%
+}
+>>>
+
+The \verb|\fixmathjaxtoc| command is used for patching commands which should
+keep their verbatim appearance in the TOC
+
+\<defined commands\><<<
+\def\fixmathjaxtoc#1{\def#1{\detokenize{#1}}}
+>>>
+
+
+Require verbatim math environments.
+
+\<configurations\><<<
+\VerbMath{subarray}
+\VerbMath{smallmatrix}
+\VerbMath{matrix}
+\VerbMath{pmatrix}
+\VerbMath{bmatrix}
+\VerbMath{Bmatrix}
+\VerbMath{vmatrix}
+\VerbMath{Vmatrix}
+\VerbMath{cases}
+\VerbMath{subequations}
+\VerbMath{aligned}
+\VerbMath{alignedat}
+\VerbMath{gathered}
+\VerbMath{gather}
+\VerbMath{gather*}
+\VerbMath{alignat}
+\VerbMath{alignat*}
+\VerbMath{xalignat}
+\VerbMath{xalignat*}
+\VerbMath{xxalignat}
+\VerbMath{align}
+\VerbMath{align*}
+\VerbMath{flalign}
+\VerbMath{flalign*}
+\VerbMath{split}
+\VerbMath{multline}
+\VerbMath{multline*}
+\VerbMath{equation}
+\VerbMath{equation*}
+\VerbMath{math}
+\VerbMath{displaymath}
+>>>
+
+It is necessary to reset env configurations for multline 
+\<configurations\><<<
+\ConfigureEnv{multline}{}{}{}{}
+\ConfigureEnv{multline*}{}{}{}{}
+>>>
+
+
+Fixes for tables of contents.
+
+\<configurations\><<<
+\fixmathjaxtoc\left
+\fixmathjaxtoc\right
+\fixmathjaxtoc\int
+\fixmathjaxtoc\,
+\fixmathjaxtoc\sin
+\fixmathjaxtoc\cos
+\fixmathjaxtoc\tan
+\fixmathjaxtoc\arcsin
+\fixmathjaxtoc\arccos
+\fixmathjaxtoc\arctan
+\fixmathjaxtoc\csc
+\fixmathjaxtoc\sec
+\fixmathjaxtoc\cot
+\fixmathjaxtoc\sinh
+\fixmathjaxtoc\cosh
+\fixmathjaxtoc\tanh
+\fixmathjaxtoc\coth
+\fixmathjaxtoc\log
+>>>
