@@ -1,3 +1,9 @@
+2018-12-04  Michal Hoftich  <michal.h21@gmail.com>
+
+	* tex4ht-html4.tex (html4-math.4ht): added "mathjax" option.
+	* tex4ht-mathjax.tex (mathjax-latex-4ht.4ht): new literate source holding
+	definitions for keeping of LaTeX commands in math commands and environments.
+
 2018-11-29  Michal Hoftich  <michal.h21@gmail.com>
 
 	* tex4ht-html4.tex (html4.4ht): Added \Configure{AddJs} and
